k8s manifest/mongo.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: myblog-ns
spec:
  serviceName: mongo-service
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongo-pvc
              mountPath: /data/db

  volumeClaimTemplates:
  - metadata:
      name: mongo-pvc
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: mongo-storage
      resources:
        requests:
          storage: 5Gi
